--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,6 +5,17 @@ body {
     font-weight: normal;
 }
 
+/*定义变量*/
+:root {
+  --admonition-border-left-width: 0.2rem;
+  --base-border-radius: 1rem;
+  --font-family: "LXGW WenKai";
+  /* --md-primary-fg-color: #FBFBFB;
+    --md-primary-fg-color--light: #FBFBFB;
+    --md-primary-fg-color--dark: #1E2129; */
+  /* --card-hover-shadow: 0 0 0.2rem #ffffff40; */
+}
+
 
 /*亮色样式*/
 [data-md-color-scheme="default"] {
@@ -29,14 +40,6 @@ body {
     --md-code-hl-comment-color: #777777;
 }
 
-:root {
-    --admonition-border-left-width: 0.2rem;
-    --base-border-radius: 1rem;
-    /* --md-primary-fg-color: #FBFBFB;
-    --md-primary-fg-color--light: #FBFBFB;
-    --md-primary-fg-color--dark: #1E2129; */
-    /* --card-hover-shadow: 0 0 0.2rem #ffffff40; */
-}
 
 /* 卡片圆角与悬浮阴影 */
 .md-typeset .grid.cards>ul>li,
@@ -67,6 +70,10 @@ body {
 [dir="ltr"] .md-search__output {
     border-bottom-right-radius: var(--base-border-radius);
     border-bottom-left-radius: var(--base-border-radius);
+}
+
+.md-banner__inner {
+  font-family: var(--font-family);
 }
 
 /* 可选：如需恢复代码块、警告框等样式，取消注释即可 */
