--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -72,7 +72,7 @@ body {
     border-bottom-left-radius: var(--base-border-radius);
 }
 
-.md-banner__inner {
+.banner{
   font-family: var(--font-family);
 }
 
