--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,10 +2,18 @@
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
 <!-- Insert generated snippet here -->
 
-<script src="https://giscus.app/client.js" data-repo="RapidAI/RapidOCR" data-repo-id="MDEwOlJlcG9zaXRvcnkzMjY2MTA3NTc="
-    data-category="Q&A" data-category-id="MDE4OkRpc2N1c3Npb25DYXRlZ29yeTMyMzEzMzAw" data-mapping="title" data-strict="0"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top"
-    data-theme="https://cdn.jsdelivr.net/gh/L33Z22L11/giscus-theme/lxgw-wenkai.css" data-lang="zh-CN"
+<script src="https://giscus.app/client.js"
+    data-repo="RapidAI/RapidOCR"
+    data-repo-id="MDEwOlJlcG9zaXRvcnkzMjY2MTA3NTc="
+    data-category="Q&A"
+    data-category-id="MDE4OkRpc2N1c3Npb25DYXRlZ29yeTMyMzEzMzAw"
+    data-mapping="title"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="https://cdn.jsdelivr.net/gh/L33Z22L11/giscus-theme/lxgw-wenkai.css"
+    data-lang="zh-CN"
     data-loading="lazy" crossorigin="anonymous" async>
     </script>
 
